--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-amplify/cli": "^10.0.0",
     "@aws-amplify/ui-react": "^3.5.4",
     "aws-amplify": "^4.3.35",
+    "aws-sdk": "^2.1226.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
