--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@aws-amplify/cli": "^10.0.0",
     "@aws-amplify/ui-react": "^3.5.4",
+    "@turf/turf": "^6.5.0",
     "aws-amplify": "^4.3.35",
     "aws-sdk": "^2.1226.0",
+    "deck.gl": "^8.8.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
