--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@turf/turf": "^6.5.0",
     "aws-amplify": "^4.3.35",
     "aws-sdk": "^2.1226.0",
-    "deck.gl": "^8.8.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-dotenv": "^0.1.3"
@@ -16,10 +15,12 @@
   "scripts": {
     "start": "react-dotenv && react-scripts start",
     "build": "react-dotenv && react-scripts build",
-    "test": "react-dotenv && react-scripts test --env=jsdom",
+    "test": "react-dotenv && jest",
+    "init-test": "node",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "react-scripts": "latest",
     "tailwindcss": "^3.1.8"
   },
